fix extra margin on form modals

--- a/ghi/src/components/itemModal.css
+++ b/ghi/src/components/itemModal.css
@@ -33,7 +33,7 @@
     box-sizing: border-box;
 }
 
-.modal-body{
+.item-modal-body{
     margin-left: 150px;
    
 }
